--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   margin: 0;
   font-family: 'Poppins', sans-serif;
 }
+body{
+  background-color: #fadcac;
+  height: 500vh;
+}
 
 a{text-decoration: none;}
 a:hover{text-decoration: none;}
@@ -32,13 +36,13 @@ li{list-style: none;}
 }
 .header{
   width: 100%;
-  height: 100vh;
+  height: 98vh;
   background-image: linear-gradient(120deg, black 10%,
   rgba(11, 41, 14, 0.9) 25%, rgba(0, 0, 0, 0.5) 60%,
-  transparent 20%), url(me.jpeg);
+  transparent 20%), url(me.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 83% 50%;
+  background-position: 83% 3%;
   /* clip-path: polygon(30% 0%, 100% 0%, 100% 100%, 0% 100%); */
   color: white;
   box-shadow: -10px 0 5px white;
@@ -53,6 +57,9 @@ li{list-style: none;}
   text-align: center;
   display: flex;
   flex-direction: column;
+}
+.header-center-part p{
+  text-transform: uppercase;
 }
 .bottom-border{
   border-width: 0 0 3px 0;
@@ -74,4 +81,10 @@ li{list-style: none;}
   background-image: linear-gradient(to right, rgb(255,0,0),rgb(255,255,0)
   ,rgb(0,255,0),rgb(0,255,255),rgb(0,0,255),rgb(255,0,255),
   rgb(255,0,0));
+}
+.font1{
+  font-size: calc(20px + 2.6vw);
+}
+.font3{
+  font-size: calc(10px + 1vw);
 }
