--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a:hover{text-decoration: none;}
 li{list-style: none;}
 
 .navbar{
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.5);
   position: fixed;
   width: 100vw;
   z-index: 1;
@@ -59,7 +59,7 @@ li{list-style: none;}
   top: 25%;
   left: 4%;
   padding: 0 0 0 4%;
-  position: absolute;
+  position: relative;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -109,9 +109,103 @@ li{list-style: none;}
 }
 
 
+.education{
+  width: 100%;
+  height: 90vh;
+  background-image: linear-gradient(
+    #110317 20%, #040105 80%);
+}
+
+
 @media only screen and (max-width: 600px) {
   .about-me-image{
     width: 300px;
     height: 240px;
+  }
+}
+
+
+
+/* Here goes loading stylings */
+#loading{
+  position: fixed;
+  z-index: 99999;
+
+}
+.load-body{
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(  #110317 20%, #040105 80%);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: linear-gradient(
+    #06F9F6, #F606F9, #F9F606
+    );
+  animation: animate 0.5s linear infinite;
+}
+.loader span{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(
+    #06F9F6, #F606F9, #F9F606
+    );
+}
+.loader span:nth-child(1)
+{
+  filter: blur(5px);
+}
+.loader span:nth-child(2)
+{
+  filter: blur(10px);
+}
+.loader span:nth-child(3)
+{
+  filter: blur(25px);
+}
+.loader span:nth-child(4)
+{
+  filter: blur(50px);
+}
+.loader:after{
+  content: "";
+  position: absolute;
+  top: 15px;
+  bottom: 15px;
+  left: 15px;
+  right: 15px;
+  border-radius: 50%;
+  background-color: #16061c;
+  background-image: url(mylogo.png);
+  background-size: 75% 75%;
+  background-repeat: no-repeat;
+  background-position: center;
+  animation: animate2 0.5s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes animate2 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
