--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ li{list-style: none;}
   color: white !IMPORTANT;
   text-transform: uppercase;
 }
-.nav-item:hover{
-  border-bottom: 1px solid #00FFEE;
+.nav-link:hover{
+  color: #00FFEE !IMPORTANT;
 }
 .btn-primary{
   color: red;
@@ -93,7 +93,7 @@ li{list-style: none;}
 .about-me{
   width: 100%;
   background-image: linear-gradient(to right, rgba(0,0,0,0.7),
-  rgba(0,0,0,0.9)), url(about-me-bg.jpg);
+  rgba(0,0,0,0.9)), url(about-me-bg.jpeg);
   background-size: cover;
   background-position: 60% 50%;
   background-attachment: fixed;
@@ -123,7 +123,7 @@ li{list-style: none;}
   width: 100%;
   background-image: linear-gradient(135deg, rgba(0,0,0,0.95) 10%,
     rgba(11,0,15,0.95) 25%, rgba(17,0,23,0.95) 60%, rgba(0,0,0,0.8) 60%),
-    url(books.jpg);
+    url(books.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
 }
