--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a:hover{text-decoration: none;}
 li{list-style: none;}
 
 .navbar{
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.8);
   position: fixed;
   width: 100vw;
   z-index: 1;
@@ -49,7 +49,7 @@ li{list-style: none;}
   height: 98vh;
   background-image: linear-gradient(120deg, black 10%,
   rgba(11, 41, 14, 0.9) 25%, rgba(0, 0, 0, 0.5) 60%,
-  transparent 20%), url(me.jpeg);
+  transparent 20%), url(./background-images/me.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 83% 30%;
@@ -93,7 +93,7 @@ li{list-style: none;}
 .about-me{
   width: 100%;
   background-image: linear-gradient(to right, rgba(0,0,0,0.7),
-  rgba(0,0,0,0.9)), url(about-me-bg.jpeg);
+  rgba(0,0,0,0.9)), url(./background-images/about-me-bg.jpeg);
   background-size: cover;
   background-position: 60% 50%;
   background-attachment: fixed;
@@ -102,7 +102,7 @@ li{list-style: none;}
 .about-me-image{
   width: 500px;
   height: 400px;
-  background-image: url(me-2.jpeg);
+  background-image: url(./background-images/me-2.jpeg);
   background-position: 50% 72%;
   background-size: cover;
   clip-path: polygon(50% 0%, 85% 10%, 75% 80%, 50% 100%,
@@ -114,16 +114,14 @@ li{list-style: none;}
 .heading-border{
   border-bottom: 3px double #f2e6ff;
 }
-.about-me-icons{
 
-}
 
 
 .education{
   width: 100%;
   background-image: linear-gradient(135deg, rgba(0,0,0,0.95) 10%,
     rgba(11,0,15,0.95) 25%, rgba(17,0,23,0.95) 60%, rgba(0,0,0,0.8) 60%),
-    url(books.jpeg);
+    url(./background-images/books.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -173,6 +171,7 @@ li{list-style: none;}
 }
 .skill-heading{
   width: 300px;
+  z-index: 11;
 }
 .skills-box{
   width: 300px;
@@ -189,6 +188,7 @@ li{list-style: none;}
   margin-bottom: 40px;
   border-radius: 10px;
   border: 1px solid #abfff8;
+  box-shadow: 0 4px 8px 0 rgba(191, 198, 199,0.8);
 }
 .skill-range{
   height: 10px;
@@ -228,7 +228,7 @@ li{list-style: none;}
   width: 100%;
   background-image: linear-gradient( rgba(0,0,0,0.8),
   rgba(11,0,15,0.8)),
-  url(projects.jpeg);
+  url(./background-images/projects.jpeg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -237,11 +237,12 @@ li{list-style: none;}
 .project-heading{
   width: 400px;
   padding: 50px;
+  z-index: 111;
 }
 
 .card{
   box-shadow: 0 4px 8px 0 rgba(191, 198, 199,0.8);
-  height: 67vh;
+  min-height: 67vh;
   text-align: center;
   background:rgba(0, 0, 0, 0.8);
   color: white;
@@ -270,8 +271,36 @@ li{list-style: none;}
 }
 
 
+#contact{
+  height: 90vh;
+  background-image: linear-gradient(130deg,
+    rgba(0,13,15,0.95) 25%, rgba(0, 20, 23,0.95) 50%, rgba(0,0,0,0.4) 50%),
+    url(./background-images/call.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
+.contact-heading{
+  position: absolute;
+  z-index: 11;
+  transform: translateX(225px) translateY(25px);
+}
 
+.contact-details{
+  color: white;
+  position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(191, 198, 199,0.8);
+  transform: translatex(170px) translateY(180px);
+}
+
+.footer{
+  background-color:#000405;
+  color: white;
+}
+
+.fab:hover,.fas:hover{
+  box-shadow: 0 1px 5px 2px rgba(191, 198, 199,0.8);
+}
 
 @media only screen and (max-width: 800px) {
   .about-me-image{
@@ -285,7 +314,15 @@ li{list-style: none;}
   .edu-heading{
     position: relative;
     transform: translate(0);
+    z-index: 11;
     margin: 50px 0;
+  }
+  .contact-heading{
+    transform: translateX(125px) translateY(25px);
+  }
+  .contact-details{
+    transform: translatex(70px) translateY(180px);
+    background-image: linear-gradient( rgba(0,0,0,0.8),rgba(0,13,15,0.8));
   }
   .education-content{
     flex-wrap: wrap;
@@ -300,7 +337,6 @@ li{list-style: none;}
     height: 150vh;
   }
 }
-
 
 
 
