--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ li{list-style: none;}
 
 .card{
   box-shadow: 0 4px 8px 0 rgba(191, 198, 199,0.8);
-  min-height: 67vh;
+  min-height: 500px;
   text-align: center;
   background:rgba(0, 0, 0, 0.8);
   color: white;
