--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ li{list-style: none;}
   background-repeat: no-repeat;
 }
 .education-content{
-  height: 600px;
+  height: 605px;
   width: 100%;
   margin: 40px 150px;
   display: flex;
@@ -152,7 +152,7 @@ li{list-style: none;}
   align-items: center;
   color: white;
   padding: 20px 0;
-  margin: 0;
+  margin: 3px;
 }
 
 .edu-1{
@@ -181,6 +181,7 @@ li{list-style: none;}
 .edu-h-in{
   transform-origin: left;
   transform: scaleX(0);
+  z-index: 100;
 }
 
 [data-aos='edu-h-1'].aos-animate{
@@ -283,8 +284,8 @@ li{list-style: none;}
 }
 
 .project-heading{
-  width: 400px;
-  padding: 50px;
+  width: 375px;
+  padding: 50px 0 50px 0;
   z-index: 111;
 }
 
@@ -356,6 +357,21 @@ li{list-style: none;}
 }
 
 @media only screen and (max-width: 800px) {
+  .header-desc>h5{
+    font-size: 16px !IMPORTANT;
+  }
+  .header-desc{
+    margin-top: 35px;
+    font-size: 13px;
+    width: 200px;
+  }
+  .header-center-part{
+    width: 300px;
+    top: 15%;
+  }
+  .name{
+    font-size: 45px; 
+  }
   .about-me-image{
     width: 300px;
     height: 240px;
@@ -394,6 +410,9 @@ li{list-style: none;}
   .skills-desc{
     width: 75%;
     font-size: 18px;
+  }
+  .project-heading{
+    width: 250px;
   }
 }
 
